Forenkler og antar at mer er beregnet